2008-09-15  Marius Vollmer  <marius.vollmer@nokia.com>

	Support for generic system-wide settings, including defaults.

	* src/confutils.cc (system_settings, default_distribution,
	load_system_settings): New.
	* src/main.cc (main): Call load_system_settings.
	* src/apt-worker.cc (misc_init): Likewise.

	* src/hildon-application-manager-config.cc: Handle system settings.

2008-09-10  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/util.cc: Removed !CAIRO_CELL_RENDERER code.
	(package_info_func): Only initialize default_icon and broken_icon
	once.

	* src/package-info-cell-renderer.c:
	(package_info_cell_renderer_set_property): Deal with NULL pixbufs.

	Include repository in package details.

	* src/main.h (struct package_info): Added repository field.
	* src/apt-worker-proto.h: New field in response.
	* src/apt-worker.cc (cmd_get_package_details): Find repository and
	include it in response.
	* src/details.cc (spd_get_details_reply): Retireve repository from
	response.
	* src/details.cc (spd_update_common_page): Show repository.

2008-09-08  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/main.cc (MENU_HACK): New define to place the menu in the
	toolbar.
	(create_toolbar): Create menu button.
	(main): Attach menu to toolbar buttons.

2008-09-03  Marius Vollmer  <marius.vollmer@nokia.com>

	Make maemo-select-menu-location do nothing.

	* utils/Makefile.am: Don't use the launcher for
	maemo-select-menu-location.
	* maemo-select-menu-location (main): Just print warning and exit.
	Removed all the rest.

	Removed the 'essential' flag for catalogues.

	* src/repo.h: remove the essential tag documentation
	* src/repo.cc: (reformat) subs spaces for tabs
	(is_read_only_entry): function removed
	(cat_edit_response): use the the readonly flag for enabled/disable
	buttons
	(show_cat_edit_dialog): the readonly flag doesn't care for the
	dialog buttons, use the flag instead of the removed function
	(cat_selection_changed): simplify the boolean operation for
	sensitivity.